# bab-ts

./: .gitignore  CHANGELOG.md  README.md  package.json  rust-output.json  test-vectors.json
.github/workflows/: nodejs.yml
example/: index.html  index.ts  style.css
src/: batch.ts  digest.ts  hasher.ts  index.ts  portable.ts  verify.ts  william3.ts
test/: index.ts  test-vectors.test.ts  verify.test.ts
test-comparison/: README.md  run-comparison.ts
test-comparison/rust/: Cargo.toml
test-comparison/rust/src/: debug.rs  debug_multi.rs  debug_trace.rs  generate_vectors.rs  main.rs
