[package]
name = "bab-comparison"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bab-comparison"
path = "src/main.rs"

[[bin]]
name = "generate-vectors"
path = "src/generate_vectors.rs"

[[bin]]
name = "debug"
path = "src/debug.rs"

[[bin]]
name = "debug-multi"
path = "src/debug_multi.rs"

[[bin]]
name = "debug-trace"
path = "src/debug_trace.rs"

[dependencies]
bab_rs = { git = "https://codeberg.org/worm-blossom/bab_rs.git", features = ["william3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
